--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "^4.36.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.22.1",
     "styled-components": "^6.1.8"
   },
