--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@supabase/supabase-js": "^2.39.7",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
+    "@types/react-lazy-load-image-component": "^1.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "styled-components": "^6.1.8"
