--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-lazy-load-image-component": "^1.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.13",
     "react-icons": "^5.0.1",
     "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.22.1",
