--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
+    "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.22.1",
